fixed add photo card alignment issue

--- a/src/pages/editProfile/EditProfilePage.css
+++ b/src/pages/editProfile/EditProfilePage.css
@@ -21,7 +21,7 @@
 .profile-albums-page {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  gap: 20px;
+  gap: 60px;
 }
 
 .profile-album2 {
@@ -67,7 +67,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 30px;
 }
 
 .add-photo-card .album-image2{
